--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,15 +3,15 @@
 steps:
   # Step 1: Build the application
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'us-east4-docker.pkg.dev/playground-s-11-cffa391e/sample-repo/sampleimage:v1', '.']
+    args: ['build', '-t', 'us-central1-docker.pkg.dev/vivid-fragment-410115/sample-node-repo/samplenodeapp:latest', '.']
   
   # Step 2: Run tests
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['run', '--rm', 'us-east4-docker.pkg.dev/playground-s-11-cffa391e/sample-repo/sampleimage:v1', 'npm', 'test']
+    args: ['run', '--rm', 'us-central1-docker.pkg.dev/vivid-fragment-410115/sample-node-repo/samplenodeapp:latest', 'npm', 'test']
 
   # Step 3: Push the Docker image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-east4-docker.pkg.dev/playground-s-11-cffa391e/sample-repo/sampleimage:v1']
+    args: ['push', '']
 
   # Step 4: Deploy the application (example for Cloud Run)
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -20,13 +20,13 @@ steps:
       - '-c'
       - |
         gcloud run deploy my-app \
-          --image us-east4-docker.pkg.dev/playground-s-11-cffa391e/sample-repo/sampleimage:v1 \
+          --image  us-central1-docker.pkg.dev/vivid-fragment-410115/sample-node-repo/samplenodeapp:latest\
           --platform managed \
-          --region us-east4 \
+          --region  us-central1\
           --allow-unauthenticated
 
 options:
   logging: CLOUD_LOGGING_ONLY  # or you can choose other logging options
 
 # If you want to specify a service account
-service_account: cli-service-account-1@playground-s-11-cffa391e.iam.gserviceaccount.com
+#service_account:
