--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,4 +29,4 @@ options:
   logging: CLOUD_LOGGING_ONLY  # or you can choose other logging options
 
 # If you want to specify a service account
-#service_account:
+service_account: ashish-project-101@vivid-fragment-410115.iam.gserviceaccount.com
