--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,33 +1,25 @@
-# cloudbuild.yaml
-
 steps:
-  # Step 1: Build the application
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'us-central1-docker.pkg.dev/vivid-fragment-410115/sample-node-repo/samplenodeapp:latest', '.']
-  
-  # Step 2: Run tests
-  #- name: 'gcr.io/cloud-builders/docker'
-  #  args: ['run', '--rm', 'us-central1-docker.pkg.dev/vivid-fragment-410115/sample-node-repo/samplenodeapp:latest', 'npm', 'test']
+# Step 1: Build the Docker Image
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'build', '-t', 'us-central1-docker.pkg.dev/propane-bebop-438107-j3/node-repository/my-build:prod1', '.' ]
 
-  # Step 3: Push the Docker image to Artifact Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/vivid-fragment-410115/sample-node-repo/samplenodeapp:latest']
+# Step 2: Push the image to the Artifact Registry
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'push', 'us-central1-docker.pkg.dev/propane-bebop-438107-j3/node-repository/my-build:prod1' ]
 
-  # Step 4: Deploy the application (example for Cloud Run)
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        gcloud run deploy my-app \
-          --image  us-central1-docker.pkg.dev/vivid-fragment-410115/sample-node-repo/samplenodeapp:latest\
-          --platform managed \
-          --region  us-central1\
-          --allow-unauthenticated
 
-options:
-  logging: CLOUD_LOGGING_ONLY  # or you can choose other logging options
-
-# If you want to specify a service account
-service_account: 256553552171@cloudbuild.gserviceaccount.com
+# Step 3: Deployment to Cloud Run after image is pushed
+- name: 'gcr.io/cloud-builders/gcloud'
+  args:
+  - 'run'
+  - 'deploy'
+  - 'my-service'  # Replace with your service name
+  - '--image'
+  - 'us-central1-docker.pkg.dev/propane-bebop-438107-j3/node-repository/my-build:prod1'
+  - '--region'
+  - 'us-central1'  # You can change this if you want to deploy to a different region
+  - '--platform'
+  - 'managed'
+  # Optional: if you want to allow unauthenticated access
+  - '--allow-unauthenticated'
 
