--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,9 +20,10 @@ steps:
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
+      - '--port' # Add the --port flag
+      - '3000'  # The port number where your application will listen
 
 options:
   logging: CLOUD_LOGGING_ONLY
 
 serviceAccount: 195851547020-compute@developer.gserviceaccount.com
-
